--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start:dev": "tsx watch ser/server.ts",
+        "start:dev": "tsx watch src/server.ts",
         "start": "node build/server.js",
-        "build": "tsup src --out-dir build"
+        "build": "tsup src --out-dir build",
+        "lint": "biome check src",
+        "lint:fix": "biome check --write src",
+        "format": "biome format --write src"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "description": "",
     "devDependencies": {
+        "@biomejs/biome": "2.3.8",
+        "@types/bcrypt": "6.0.0",
+        "@types/bcryptjs": "2.4.6",
         "@types/node": "24.10.1",
         "prisma": "7.0.1",
         "tsup": "8.5.1",
@@ -21,8 +27,14 @@
         "typescript": "5.9.3"
     },
     "dependencies": {
+        "@prisma/adapter-pg": "7.0.1",
+        "@prisma/client": "7.0.1",
+        "@types/pg": "8.15.6",
+        "bcrypt": "6.0.0",
+        "bcryptjs": "3.0.3",
         "dotenv": "17.2.3",
         "fastify": "5.6.2",
+        "pg": "8.16.3",
         "zod": "4.1.13"
     }
 }
